[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conda-tree"
version = "1.2.0"
requires-python = ">=3.10"
description = "conda dependency tree helper"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Renan Valieris" }]
dependencies = [
    "networkx",
    "colorama",
]

[project.urls]
Homepage = "https://github.com/conda-incubator/conda-tree"

[project.scripts]
conda-tree = "conda_tree.cli:main"

[project.entry-points.conda]
conda-tree = "conda_tree.hooks"

[tool.hatch.build.targets.wheel]
packages = ["conda_tree"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10"
conda = ">=25.0"
networkx = ">=2.0"
colorama = "*"

[tool.pixi.pypi-dependencies]
conda-tree = { path = ".", editable = true }

[tool.pixi.tasks]
test      = "pytest tests/ -v"
test-cov  = "pytest tests/ -v --cov=conda_tree --cov-report=term-missing"
lint      = "ruff check conda_tree/ tests/"
format    = "ruff format conda_tree/ tests/"
typecheck = "mypy conda_tree/"

[tool.pixi.feature.dev.dependencies]
pytest     = ">=7.0"
pytest-cov = "*"
ruff       = "*"
mypy       = "*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
